feat: added role creation for github actions

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,3 +38,5 @@ repos:
           - --args=--skip-check CKV_AWS_111
           - --args=--skip-check CKV_AWS_356
           - --args=--skip-check CKV2_GHA_1
+          - --args=--skip-check CKV_AWS_108
+          - --args=--skip-check CKV_AWS_107
